--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* body {
+    color: lightgray;
+    background-color: black;
+    cursor: default;
+} */
+
+body {
+    background-color: bisque;
+    cursor: default;
+}
