aligned code in text-analyzer.html

--- a/src/app/components/text-analyzer/text-analyzer.html
+++ b/src/app/components/text-analyzer/text-analyzer.html
@@ -38,8 +38,9 @@
                     </app-synonym>
                     }
 
-                    @if(synonyms && synonyms.length < 1 ){ <p style="text-align: center;">NO RESULT</p>
-                        }
+                    @if(synonyms && synonyms.length < 1 ){
+                    <p style="text-align: center;">NO RESULT</p>
+                    }
 
                 </div>
 
