add if else to synonym.html

--- a/src/app/components/synonym/synonym.html
+++ b/src/app/components/synonym/synonym.html
@@ -1,6 +1,13 @@
 <p (click)="onSynonymClick()">
-    
+
+
+    @if(!synonym.score){
+    {{synonym.word}}
+    }@else{
     {{synonym.word}} -
     {{synonym.score}}
+    }
+
+
 
 </p>
