add <br> to synonym.html

--- a/src/app/components/synonym/synonym.html
+++ b/src/app/components/synonym/synonym.html
@@ -4,7 +4,7 @@
     @if(!synonym.score){
     {{synonym.word}}
     }@else{
-    {{synonym.word}} -
+    {{synonym.word}} <br/> score:
     {{synonym.score}}
     }
 
