refactor: Remove unused Word class, fix: Remove non-existent link to 'test' in synonym.html

--- a/src/app/components/synonym/synonym.html
+++ b/src/app/components/synonym/synonym.html
@@ -1,4 +1,4 @@
-<p routerLink="test" (click)="onSynonymClick()">
+<p (click)="onSynonymClick()">
   @if(!synonym.score){
   {{ synonym.word }}
   }@else{
